--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,9 @@
+<div>
+<%= link_to "Follow me", "https://www.facebook.com/trybloc", class: "social-btn" %>
 <h1>Welcome#about</h1>
+</div>
+
 <p>Find me in app/views/welcome/about.html.erb</p>
+
+
+
