--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
  
  <div class="row">
    <div class="col-md-8">
-     <p><%= @post.body %></p>
+     <h4><%= @post.body %></h4>
    </div>
    <div class="col-md-4">
      <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
