--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,6 +8,13 @@
  <div class="row">
    <div class="col-md-8">
      <h4><%= @post.body %></h4>
+     <div>
+       <h3>Comments</h3>
+       <%= render @post.comments %>
+     </div>
+     <% if current_user %>
+       <%= render 'comments/form', comment: Comment.new, post: @post %>
+     <% end %>
    </div>
    
     
