--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,12 @@
- <h1>
-   <%= @post.title %> <br>
-   <small>
-     submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
-   </small>
- </h1>
+ <div>
+   <%= render partial: 'votes/voter', locals: { post: @post } %>
+   <h1>
+     <%= @post.title %> <br>
+     <small>
+       submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
+     </small>
+   </h1>
+ </div>
 
  <div class="row">
    <div class="col-md-8">
@@ -19,7 +22,7 @@
    
     
      <div class="col-md-4">
-      <% if user_mod_is_authorized_for_post?(@post) %>
+      <% if is_user_mod_or_admin_or_owner_of_post?(@post) %>
         <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
       <% end %>
       <% if user_is_authorized_for_post?(@post) %>
@@ -27,4 +30,15 @@
        <% end %> 
      </div>
   
+  <div class="col-md-4">
+     <h3>
+       <%= pluralize(@post.points, 'point') %>
+       <div>
+         <small>
+           <%= pluralize(@post.up_votes, 'up vote') %>,
+           <%= pluralize(@post.down_votes, 'down vote') %>
+         </small>
+       </div>
+     </h3>
+   </div>
  </div>
