--- a/app/views/favorite_mailer/new_post.text.erb
+++ b/app/views/favorite_mailer/new_post.text.erb
@@ -1,6 +1,6 @@
 New post "<%= @post.title %>"
  <%= "=" * (@post.title.length + 12) %>
  
- By: <%= user.name %>
+ By: <%= @post.user.name %>
  
  Visit online at: <%= topic_post_url(@post.topic, @post) %>
