--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,15 +12,35 @@
          <h2 class="media-heading"><%= @user.name %></h2>
          <small>
            <%= pluralize(@user.posts.count, 'post') %>,
-           <%= pluralize(@user.comments.count, 'comment') %>
+           <%= pluralize(@user.comments.count, 'comment') %>,
+           <%= pluralize(@user.favorites.count, 'favorite') %>
          </small>
        </div>
      </div>
    </div>
  </div>
  
- <h2>Posts</h2>
+ <h2>Posts </h2>
+ <% if does_user_have_no_posts? %>
+   <h3> <%= @user.name %> has not submitted any posts yet.</h3>
+ <% end %>
  <%= render @user.posts %>
  
- <h2>Comments</h2>
+ <h2>Comments </h2>
+ <% if does_user_have_no_comments? %>
+   <h3> <%= @user.name %> has not submitted any comments yet. </h3>
+ <% end %>
  <%= render @user.comments %>
+ 
+ <h2>Favorites </h2>
+ <% if does_user_have_no_favorites? %>
+   <h3> <%= @user.name %> has not favorited yet. </h3>
+ <% end %>
+ 
+ <% @user.posts.each do |post| %>
+   <%  if @user.favorite_for(post) %>
+     <%= render post %>
+   <% end %>
+ <% end %>
+ 
+ 
